--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       // phone minus sign event handler
       var removePhone= document.getElementById('minusPhone');
       removePhone.addEventListener('click',function(){
-       minusHandler('currentPhone', 'phonePrice', 'minusPhone', 1249);
+       minusHandler('currentPhone', 'phonePrice', 1249);
        add();
       })
       
@@ -97,7 +97,7 @@
       // cover minus sign event handler
       var removeCover= document.getElementById('minusCover');
       removeCover.addEventListener('click',function(){
-         minusHandler('currentCover', 'coverPrice', 'minusCover', 59);
+         minusHandler('currentCover', 'coverPrice', 59);
          add();
       })
 
@@ -120,16 +120,20 @@
       }
 
       // minus handler function
-      function minusHandler(id1, id2, id3, price) {
-      var currentCoverNumber= document.getElementById(id1).innerText ;
-      var currentCoverPiece= parseInt(currentCoverNumber);
-      var remaining= currentCoverPiece - 1;
-      document.getElementById(id1).innerText= remaining;
-      if(remaining == 0){
-         document.getElementById(id3).style.display= 'none';
-      }
+      function minusHandler(id1, id2, price) {
+         var currentCoverNumber= document.getElementById(id1).innerText ;
+         var currentCoverPiece= parseInt(currentCoverNumber);
+         var remaining= currentCoverPiece - 1;
+         if(remaining < 0){
+            document.getElementById(id1).innerText= 0;
+            document.getElementById(id2).innerText= 0;
+         }
+         else{
+            document.getElementById(id1).innerText= remaining;
 
-      document.getElementById(id2).innerText= remaining * price;
+            document.getElementById(id2).innerText= remaining * price;
+         }
+
       }
 
 
